<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>personal.aurelien</groupId>
    <artifactId>irl_prob2</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>de.hhu.stups</groupId>
            <artifactId>ltl-dsl</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>de.hhu.stups</groupId>
            <artifactId>de.prob2.kernel</artifactId>
            <version>3.2.6</version>
        </dependency>
    </dependencies>
    <build>
  <plugins>
    <plugin>
      <groupId>org.codehaus.mojo</groupId>
      <artifactId>exec-maven-plugin</artifactId>
      <version>3.1.0</version>
      <executions>
        <execution>
          <goals>
            <goal>java</goal>
          </goals>
        </execution>
      </executions>
      <configuration>
        <mainClass>apicalis.Tests_ProB</mainClass>
        <classpathScope>test</classpathScope>
       <jvmArgs>
          <jvmArg>--illegal-access=deny</jvmArg>
          <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
        </jvmArgs>
      </configuration>
    </plugin>
  </plugins>
</build>
    <name>IRL_ProB</name>
</project>